# quant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  STRATEGY_CONSTITUTION.md  docker-compose.yml  make.cmd  pyproject.toml
.github/: copilot-instructions.md
configs/: alerts.yaml  app.yaml  autonomy.yaml  canary_rehearsal.yaml  data.yaml  datasets.yaml  drift.yaml  dry_run.yaml  dryrun_monitoring.yaml  execution.yaml  freqtrade.yaml  freqtrade_artifacts.yaml  historical_data.yaml  integrations.yaml  live_canary.yaml  live_execution.yaml  paper_trading.yaml  prediction_market_activity.yaml  prediction_market_research.yaml  providers.yaml  proving_mode.yaml  risk_limits.yaml  schedule.yaml  strategies.yaml  strategy_research.yaml  symbols.yaml  venue_calibration.yaml  watchdog.yaml
docs/: ai_boundary.md  architecture.md  autonomous_ops.md  capital_unlock_policy.md  data_source_policy.md  datasets.md  dry_run_monitoring.md  evidence_policy.md  freqtrade_dry_run.md  freqtrade_trade_artifacts.md  future_integrations.md  historical_data.md  human_approval_policy.md  incident_policy.md  incident_response_runbook.md  key_permission_policy.md  live_canary_policy.md  live_execution_lane.md  live_trading_policy.md  market_structure_features.md  overfitting_policy.md  promotion_policy.md  proving_mode.md  readiness_policy.md  risk_policy.md  setup.md  stoploss_on_exchange_policy.md  strategy_research.md
freqtrade/: README.md
notebooks/: README.md
scripts/: bootstrap.py  canary_arm_token.py  canary_capital_ladder.py  canary_checklist.py  canary_final_gate.py  (+70 more)
(+598 files in other folders)
