[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-os-factory"
version = "0.1.0"
description = "Local deterministic QuantOps simulation foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
quant-os = "quant_os.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

